syntax="proto3";
option go_package = "./";
// protoc --proto_path=tasks_grpc --go_out=plugins=grpc:tasks_grpc tasks.proto
service TaskHandler{
    rpc AddTask (SingleTask) returns (SingleTask);
    rpc FetchTask(TaskIDRequest) returns (ListTasks);
    rpc StateUpdate(TaskIDRequest) returns (SingleTask);
    rpc DeleteTask(TaskIDRequest) returns(SingleTask);
}

message TaskIDRequest{
    string id  =1;
}

message SingleTask{
    string ID =1;
    string Description =2;
    string State=3;
}

message ListTasks{
    repeated SingleTask Tasks=1;
}